# AnkiMaker

./: Cargo.toml  README.md  README_CN.md  Todo.md
app/: Cargo.toml
app/src/: lib.rs
docsify/: sidebar.md
src/: app.rs  character.rs  cli.rs  config.rs  content.rs  header.rs  info.rs  lib.rs  main.rs  mode.rs  notes.rs  root_info.rs  symbol.rs  text.rs
src/default_template/: config.rs  content.rs  info.rs  mod.rs  text.rs
src/header/: headers.rs  mod.rs
src/poem_template/: character.rs  config.rs  content.rs  info.rs  mod.rs  raw_character.rs  text.rs
