[package]
name = "anki_maker"
version = "0.5.9"
edition = "2021"

[dependencies]

clap = { version = "4.4", features = ["derive"] }
diff = "0.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
app = { path = "./app" }

[[bin]]
name = "ankimaker"
path = "./src/bin/cli.rs"

[[bin]]
name = "gui"
path = "./src/bin/gui.rs"

[workspace]
members = ["app"]
