[package]
name = "anki_maker"
version = "0.6.3"
edition = "2021"
default-run = "ankimaker"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
diff = "0.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
eframe = { version = "0.26", features = [
    "accesskit",     # (Default) Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # (Default) Embed the default egui fonts.
    "glow",          # (Default) Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
], optional = true }

[[bin]]
name = "ankimaker"

[[bin]]
name = "gui"
path = "./src/bin/gui.rs"

[features]
gui = ["eframe"]
