[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23", features = [
    "accesskit",     # (Default) Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # (Default) Embed the default egui fonts.
    "glow",          # (Default) Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = "1.0"
